2001-09-22  Sam Steingold  <sds@gnu.org>

	* error.d (end_error): use exit() instead of NOTREACHED to avoid
	an infinite loop reporting fatal errors

2001-09-22  Sam Steingold  <sds@gnu.org>

	new built-ins: SYS::WHITESPACEP & SYS::WRITE-SPACES
	* constsym.d, subr.d (whitespacep, write_spaces): added
	* io.d (write_spaces, whitespacep): implemented
	* lispbibl.d (cint_white_p): new macro
	* stream.d (strip_white): use it
	* compiler.lisp (stream-tab): use write-spaces
	* describe.lisp (describe-stream): ditto
	* format.lisp (whitespacep): commented out

2001-09-21  Sam Steingold  <sds@gnu.org>

	binary i/o on True64
	* stream.d (bitbuff_is_I): do not add wbitm(intLsize) to wert
	before calling negfixnum (why was it there in the first place?)

2001-09-21  Sam Steingold  <sds@gnu.org>

	some bugfixes to the Pretty-Printer
	* io.d (FORMAT-TABULATE): check the optional arguments
	* format.lisp (formatter-main-1): added FORMAT-PPRINT-NEWLINE and
	FORMAT-PPRINT-INDENT
	(format-pprint-indent): fixed COUNT default value

2001-09-20  Sam Steingold  <sds@gnu.org>

	fixed WITH-COMPILATION-UNIT
	* compiler.lisp (compile-warnings-p, compile-failure-p): new
	helper functions
	(compile, compile-file): use them
	(c-report-problems): call c-reset-globals
	(with-compilation-unit): bind *error-count* *warning-count* and
	*style-warning-count* when *c-top-call*
	(compile-file): use with-compilation-unit
	(compile): flet closure-slot

2001-09-20  Sam Steingold  <sds@gnu.org>

	handle *PRINT-LEVEL* for CLOS instances correctly
	* io.d (pr_instance, pr_structure_external): do level check
	(pr_structure): do not do level check

2001-09-20  Sam Steingold  <sds@gnu.org>

	PPRINT-LOGICAL-BLOCK supports *PRINT-CIRCLE* and *PRINT-LENGTH*
	* pprint.lisp (pprint-pop): handle *PRINT-LENGTH* & *PRINT-CIRCLE*
	* constsym.d, subr.d (pcirclep): added
	* io.d (double_dots): do not set *PRIN-LINES* to :END
	(string_fit_line_p): take a third arg offset
	(pr_enter_1): do not print TAB before NL